--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
     "@solana/spl-token": "^0.4.8",
-    "@solana/web3.js": "^1.95.4"
+    "@solana/web3.js": "^1.95.4",
+    "@solana/spl-token-metadata": "^0.1.4"
   },
   "devDependencies": {
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
